--- a/water-it/src/app/components/dashboard-components/sensors-preview-components/temperature-preview/temperature-preview.component.html
+++ b/water-it/src/app/components/dashboard-components/sensors-preview-components/temperature-preview/temperature-preview.component.html
@@ -1,4 +1,4 @@
 <div class="temperature-preview-chart-container">
-    <p class="temperature-value">{{ data?.temperature }}</p>
+    <p class="temperature-value">{{ data?.temperature.toFixed(1) + '°C'}}</p>
     <p class="temperature-label">Real Temperature</p>
 </div>
